[gd_scene load_steps=8 format=3 uid="uid://dw4b6bi23xp2j"]

[ext_resource type="PackedScene" uid="uid://dp0mi4kif2o1c" path="res://player.tscn" id="1_fjmar"]
[ext_resource type="Script" path="res://Main.gd" id="1_p16a4"]
[ext_resource type="PackedScene" uid="uid://1hb8d2tvrhbs" path="res://Enemy.tscn" id="2_vp3hb"]
[ext_resource type="PackedScene" uid="uid://ddec5ir5q6bys" path="res://enemy_projectile.tscn" id="3_5vpb4"]
[ext_resource type="PackedScene" uid="uid://7nf8fbsxbiyy" path="res://HUD.tscn" id="4_ofvdb"]
[ext_resource type="Texture2D" uid="uid://c6oc3ygdl7vcr" path="res://art/background.png" id="5_keglc"]

[sub_resource type="Curve2D" id="Curve2D_5w8pb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1112, 25, 0, 0, 0, 0, 1113, 616)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_p16a4")
enemy_scene = ExtResource("2_vp3hb")
enemy_projectile_scene = ExtResource("3_5vpb4")

[node name="Player" parent="." instance=ExtResource("1_fjmar")]

[node name="EnemyTimer" type="Timer" parent="."]

[node name="PowerupSpawnTimer" type="Timer" parent="."]

[node name="PlayerStartPosition" type="Marker2D" parent="."]
position = Vector2(95, 325)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_5w8pb")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(1112, 25)
rotation = 1.5691

[node name="HUD" parent="." instance=ExtResource("4_ofvdb")]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -20.0
offset_top = -11.0
offset_right = 1178.0
offset_bottom = 663.0
texture = ExtResource("5_keglc")
expand_mode = 1

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="PowerupSpawnTimer" to="." method="_on_powerup_spawn_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
